[project]
name = "langgraph-agent"
version = "0.1.0"
description = "LangGraph ReAct Agent on AWS Bedrock AgentCore"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
    "pulumi-aws-native>=1.0.0",
    "pulumi-docker-build>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
